objects/Error__c.object
<CustomObject>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ErrorType__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required Field Missing</fullName>
                </value>
                <value>
                    <fullName>Custom Validation Rule Failed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FullMessage__c</fullName>
        <label>Full Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>Object Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordURL__c</fullName>
        <label>Record URL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ObjectType__c</columns>
        <columns>ErrorType__c</columns>
        <columns>FullMessage__c</columns>
        <columns>DateTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>ObjectType__c</columns>
        <columns>NAME</columns>
        <columns>ErrorType__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>FullMessage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>StackTrace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>ObjectType__c</columns>
        <columns>NAME</columns>
        <columns>ErrorType__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>FullMessage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>StackTrace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>